--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,45 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="gray_simple">#f7f4f8</color>
+    <color name="home_text">#AAAAAA</color>
+    <color name="lucency">#389ef6</color>
+    <color name="gray">#C5C5C5</color>
+    <color name="tab_lucency">#95cafe</color>
+    <color name="black">#000000</color>
+    <color name="black01">#363636</color>
+    <color name="black02">#575757</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white01">#D1EEEE</color>
+    <color name="blue05">#0000FF</color>
+    <color name="blue01">#00BFFF</color>
+    <color name="blue02">#A4D3EE</color>
+    <color name="blue03">#0F91E2</color>
+    <color name="blue04">#8DB6CD</color>
+    <color name="blue06">#5D8DB1</color>
+    <color name="blue07">#4169E1</color>
+    <color name="blue08">#1E90FF</color>
+    <color name="blue09">#63B8FF</color>
+    <color name="blue10">#5CACEE</color>
+    <color name="blue11">#473778</color>
+    <color name="blue12">#2e87ed</color>
+    <color name="blue13">#1da8e9</color>
+    <color name="blue14">#0068ff</color>
+    <color name="purple">#6F7691</color>
+    <color name="green01">#90EE90</color>
+    <color name="green02">#00EE00</color>
+    <color name="green03">#77c1b0</color>
+    <color name="grey01">#8F8F8F</color>
+    <color name="grey02">#6B6B6B</color>
+    <color name="grey03">#AAAAAA</color>
+    <color name="grey04">#4F4F4F</color>
+    <color name="grey05">#EAEAEA</color>
+    <color name="grey06">#DBDBDB</color>
+    <color name="grey07">#ededed</color>
+    <color name="orange01">#FF8C69</color>
+    <color name="background">#FFFFFF</color>
+    <color name="split_line">#11112233</color>
+    <color name="text1">#59B29C</color>
+    <color name="text2">#333333</color>
 </resources>
