--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,12 @@
             android:hint="@string/prompt_password"
             android:inputType="textPassword" />
 
+        <CheckBox
+            android:text="记住密码"
+            android:id="@+id/cb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <Button
             android:textSize="16sp"
             android:gravity="center"
