--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_spiinner"
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
-
-    <TextView
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@color/lucency"
         android:id="@+id/tvName"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
+        android:textColor="@color/white"
+        android:gravity="center"
         android:text="1111" />
 
-
-</LinearLayout>
