--- a/app/src/main/res/layout/layout_griditem_addpic.xml
+++ b/app/src/main/res/layout/layout_griditem_addpic.xml
@@ -8,14 +8,14 @@
               android:gravity="center">
 
     <RelativeLayout
-        android:layout_width="70dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
         android:gravity="center">
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
             android:scaleType="fitXY" />
 
         <TextView
