--- a/app/src/main/res/layout/layout_takepic.xml
+++ b/app/src/main/res/layout/layout_takepic.xml
@@ -6,31 +6,33 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnAddPic"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@mipmap/ic_add_32px"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="图片"/>
+
+    </LinearLayout>
+
+    <LinearLayout
 
         android:id="@+id/action"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/btnAddPic"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@mipmap/ic_add_32px"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="图片"/>
-
-        </LinearLayout>
 
         <GridView
             android:id="@+id/gridView"
@@ -39,7 +41,7 @@
             android:layout_marginLeft="5dp"
             android:horizontalSpacing="5dp"
             android:verticalSpacing="15dp"
-            android:numColumns="3"
+            android:numColumns="1"
             android:columnWidth="90dp"
             android:stretchMode="columnWidth"
             android:gravity="center">
