--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,58 @@
         <item name="android:textColor">@drawable/selector_text_color_2</item>
     </style>
 
+    <!--无标题栏主题-->
+    <style name="NoTitleBarActivityStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
+        <item name="android:textSize">14sp</item>
+        <item name="colorPrimary">@color/lucency</item>
+        <item name="colorPrimaryDark">@color/lucency</item>
+    </style>
+
+    <!--系统默认textview样式-->
+    <style name="DefaultTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="colorPrimary">@color/lucency</item>
+        <item name="colorPrimaryDark">@color/lucency</item>
+    </style>
+
+    <style name="tvStyle">
+        <item name="android:maxLines">1</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/shape_activity_tv_press</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:layout_height">30dp</item>
+    </style>
+
+    <style name="tvStyle2">
+        <item name="android:maxLines">1</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/shape_activity_tv_press</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:layout_height">30dp</item>
+    </style>
+
+    <style name="tvStyle3">
+        <item name="android:maxLines">1</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/shape_activity_tv_press</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_weight">2.5</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:layout_height">30dp</item>
+    </style>
+
+
+
 </resources>
